Minor bug fixes + closed issue #41

--- a/projects/calculator.html
+++ b/projects/calculator.html
@@ -107,17 +107,17 @@
                     <div class="calc-result-section">
                         <h3>Result</h3>
 
-                        <img id="img-sqr">
+                        <img id="img-sqr" alt="Square symbol icon">
                         <p id="p-sqr"></p><br>
-                        <img id="img-cube">
+                        <img id="img-cube" alt="Cubic symbol icon">
                         <p id="p-cube"></p><br>
-                        <img id="img-factorial">
+                        <img id="img-factorial" alt="Factorial symbol icon">
                         <p id="p-factorial"></p><br>
-                        <img id="img-sqr-root">
+                        <img id="img-sqr-root" alt="Square root symbol icon">
                         <p id="p-sqr-root"></p><br>
-                        <img id="img-cube-root">
+                        <img id="img-cube-root" alt="Cubic root symbol icon">
                         <p id="p-sqr-cubic-root"></p><br>
-                        <img id="img-circle-length">
+                        <img id="img-circle-length" alt="Circle length symbol icon">
                         <p id="p-circle-length"></p>
 
                     </div>
