--- a/projects/restful-booker-API-testing-with-postman.html
+++ b/projects/restful-booker-API-testing-with-postman.html
@@ -188,10 +188,15 @@
 
                     <section class="article-section">
                         <h4 id="my_restful_booker_API_test_examples">My Restful Booker API test examples</h4>
+                        <p>Before we start writing our tests we should check the API documentation and what operations and requests could be used. In my case I tested <a href="https://restful-booker.herokuapp.com/apidoc/index.html">Restful-booker API</a>, but I'd also found many of them on this <a href="https://github.com/toddmotto/public-apis/">GitHub page</a>.</p>
+                        <img src="../images/articles/restful-booker-api-documentation.png" alt="Restful Booker API documentation example">
+                        <p>Also we can refer to the <a href="">API test scenarios</a> based on positive, negative and even desctructive inputs.<br>
+                        Positive tests include any happy path checkings - add/delete bookId and ensure if POST, DELTE, PATCH, PUT and GET methods work as expected. Also we should check if our request doesn't lead to idempotence.</p>   
                         <p><a
-                                href="https://www.postman.com/ivang1f/workspace/my-workspace/collection/21979091-ec197f73-1f42-4644-8ac3-2fe8bc13ca98?action=share&creator=21979091&active-environment=21979091-b82d0b01-8c08-4f96-9612-aa9195aba40f">
+                                href="https://www.postman.com/ivang1f/workspace/ivan-qa-api/collection/21979091-ec197f73-1f42-4644-8ac3-2fe8bc13ca98?action=share&creator=21979091">
                                 You can check my API test examples in this POSTMAN workspace<i
                                     class="fa fa-external-link" aria-hidden="true"></i></a></p>
+                        <img src="../images/articles/restful-booker-api-workspace.png" alt="Restful booker API workspace example">
 
                     </section>
 
@@ -204,6 +209,11 @@
                                         aria-hidden="true"></i></a></li>
                             <li><a href="https://www.postman.com/">Postman - is an API platform for building and using
                                     APIs<i class="fa fa-external-link" aria-hidden="true"></i></a></li>
+
+                            <li><a href="https://restful-booker.herokuapp.com/">An API playground created by Mark Winteringham<i class="fa fa-external-link" aria-hidden="true"></i></a></li>
+
+                            <li><a href="https://github.com/toddmotto/public-apis/">GitHub - Public APIs<i class="fa fa-external-link" aria-hidden="true"></i></a></li>
+                                    
                         </ol>
                     </section>
 
