--- a/feedback.html
+++ b/feedback.html
@@ -5,14 +5,14 @@
     <title>Ivan Gavrikov &#8211; Feedback</title>
     <!--Meta-->
     <meta charset=utf-8>
-    <link rel="apple-touch-icon" sizes="180x180" href="../ivan-qa/favicon-apple-180x180.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../ivan-qa/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../ivan-qa/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon-apple-180x180.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <!--Plugins CSS-->
     <!--font-awesome-version 4.7.0-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--Theme CSS-->
-    <link rel="stylesheet" type="text/css" href="../ivan-qa/styles/main.css">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 
 <body id="top">
@@ -29,13 +29,13 @@
             <div class="dark-mode-section">
                 <button class="btn-dark-mode">Dark Mode</button>
             </div>
-            <script src="../ivan-qa/scripts/dark-mode.js"></script>
+            <script src="scripts/dark-mode.js"></script>
             <!--top-section-->
             <div class="top-section">
                 <!--header-->
                 <header>
                     <div class="person-info">
-                        <h1 class="name"><a href="../ivan-qa/index.html"><i class="fa fa-user-o" aria-hidden="true"></i>Ivan
+                        <h1 class="name"><a href="index.html"><i class="fa fa-user-o" aria-hidden="true"></i>Ivan
                                 Gavrikov</a></h1>
                         <h2 class="position">QA Specialist</h2>
                     </div>
@@ -44,11 +44,11 @@
             <!--nav-->
             <nav class="top-nav">
                 <ul>
-                    <li><a href="../ivan-qa/resume.html">Resume</a></li>
+                    <li><a href="resume.html">Resume</a></li>
 
                     <li>|</li>
 
-                    <li><a href="../ivan-qa/projects.html">Projects</a></li>
+                    <li><a href="projects.html">Projects</a></li>
 
                     <li>|</li>
 
@@ -56,7 +56,7 @@
 
                     <li>|</li>
 
-                    <li><a href="../ivan-qa/feedback.html">Feedback</a></li>
+                    <li><a href="feedback.html">Feedback</a></li>
 
                 </ul>
             </nav>
@@ -95,7 +95,7 @@
                 <!--footer-section-4-->
                 <li>
                     <h2>2023 - Ivan Gavrikov</h2>
-                    <a href="../ivan-qa/index.html">Quality Assurance Specialist</a>
+                    <a href="index.html">Quality Assurance Specialist</a>
                 </li>
             </ul>
         </footer>
