--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <title>Ivan Gavrikov &#8211; QA Specialist</title>
     <!--Meta-->
     <meta charset=utf-8>
-    <link rel="apple-touch-icon" sizes="180x180" href="../ivan-qa/favicon-apple-180x180.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../ivan-qa/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../ivan-qa/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon-apple-180x180.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <!--Plugins CSS-->
     <!--font-awesome-version 4.7.0-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--Theme CSS-->
-    <link rel="stylesheet" type="text/css" href="../ivan-qa/styles/main.css">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 
 <body id="top">
@@ -29,13 +29,13 @@
             <div class="dark-mode-section">
                 <button class="btn-dark-mode">Dark Mode</button>
             </div>
-            <script src="../ivan-qa/scripts/dark-mode.js"></script>
+            <script src="scripts/dark-mode.js"></script>
             <!--top-section-->
             <div class="top-section">
                 <!--header-->
                 <header>
                     <div class="person-info">
-                        <h1 class="name"><a href="../ivan-qa/index.html"><i class="fa fa-user-o"
+                        <h1 class="name"><a href="index.html"><i class="fa fa-user-o"
                                     aria-hidden="true"></i>Ivan
                                 Gavrikov</a></h1>
                         <h2 class="position">QA Specialist</h2>
@@ -45,11 +45,11 @@
                 <!--nav-->
                 <nav class="top-nav">
                     <ul>
-                        <li><a href="../ivan-qa/resume.html">Resume</a></li>
+                        <li><a href="resume.html">Resume</a></li>
 
                         <li>|</li>
 
-                        <li><a href="../ivan-qa/projects.html">Projects</a></li>
+                        <li><a href="projects.html">Projects</a></li>
 
                         <li>|</li>
 
@@ -57,7 +57,7 @@
 
                         <li>|</li>
 
-                        <li><a href="../ivan-qa/feedback.html">Feedback</a></li>
+                        <li><a href="feedback.html">Feedback</a></li>
 
                     </ul>
                 </nav>
@@ -71,7 +71,7 @@
                 <div class="main-section-item">
                     <!--avatar-->
                     <div class="avatar">
-                        <img src="../ivan-qa/images/avatar.jpg" alt="Photo Ivan Gavrikov">
+                        <img src="images/avatar.jpg" alt="Photo Ivan Gavrikov">
                     </div>
 
                     <!--about-section-->
@@ -100,10 +100,10 @@
                     </section>
                     <!--link-section-->
                     <div class="link-section">
-                        <a href="../ivan-qa/resume.html">
+                        <a href="resume.html">
                             <div class="project-links">Resume</div>
                         </a>
-                        <a href="../ivan-qa/projects.html">
+                        <a href="projects.html">
                             <div class="project-links">Projects</div>
                         </a>
                         <a href="https://github.com/g1f">
@@ -117,7 +117,7 @@
                     <section class="gallery-section">
                         <h2>My Certificates</h2>
                         <div class="dislayed-img-wrapper">
-                            <img class="displayed-img" src="../ivan-qa/images/gallery/ISTQB-certificate.png"
+                            <img class="displayed-img" src="images/gallery/ISTQB-certificate.png"
                                 alt="Current displayed image">
                         </div>
 
@@ -128,7 +128,7 @@
 
                 </div>
 
-                <script src="../ivan-qa/scripts/gallery.js"></script>
+                <script src="scripts/gallery.js"></script>
 
                 <div class="main-section-item">
                     <section class="tools-section">
@@ -137,136 +137,136 @@
                             <tr>
                                 <td>Project Management</td>
                                 <td colspan="4"><a href="https://www.atlassian.com/software/jira"><img
-                                            src="../ivan-qa/images/icons/logo-atlassian-jira.png"
+                                            src="images/icons/logo-atlassian-jira.png"
                                             alt="atlassian jira logo">Atlassian JIRA</a></td>
                             </tr>
 
                             <tr>
                                 <td>Test Case Management</td>
                                 <td><a href="https://www.testrail.com/"><img
-                                            src="../ivan-qa/images/icons/logo-test-rail.png"
+                                            src="images/icons/logo-test-rail.png"
                                             alt="testrail logo">TestRail</a></td>
                                 <td><a href="https://zephyrdocs.atlassian.net/wiki/spaces/ALLDOCS/overview?mode=global"><img
-                                            src="../ivan-qa/images/icons/logo-zephyr.png" alt="Zephyr logo">Zephyr</a>
+                                            src="images/icons/logo-zephyr.png" alt="Zephyr logo">Zephyr</a>
                                 </td>
                                 <td colspan="2"><a
                                         href="https://www.tricentis.com/products/unified-test-management-qtest"><img
-                                            src="../ivan-qa/images/icons/logo-qtest.png" alt="qTest logo">qTest</a>
+                                            src="images/icons/logo-qtest.png" alt="qTest logo">qTest</a>
                                 </td>
                             </tr>
 
                             <tr>
                                 <td>Bug Management</td>
                                 <td><a href="https://www.atlassian.com/software/jira"><img
-                                            src="../ivan-qa/images/icons/logo-atlassian-jira.png"
+                                            src="images/icons/logo-atlassian-jira.png"
                                             alt="Atlassian JIRA logo">Atlassian JIRA</a></td>
                                 <td colspan="3"><a href="https://www.testrail.com/"><img
-                                            src="../ivan-qa/images/icons//logo-test-rail.png"
+                                            src="images/icons//logo-test-rail.png"
                                             alt="testrail logo">TestRail</a></td>
                             </tr>
 
                             <tr>
                                 <td>Mobile Testing</td>
                                 <td><a href="https://developer.apple.com/testflight/"><img
-                                            src="../ivan-qa/images/icons/logo-testflight.png"
+                                            src="images/icons/logo-testflight.png"
                                             alt="TestFlight logo">TestFlight</a></td>
                                 <td><a href="https://developer.android.com/studio"><img
-                                            src="../ivan-qa/images/icons/logo-android-studio.png"
+                                            src="images/icons/logo-android-studio.png"
                                             alt="Android Studio logo">Android Studio</a></td>
                                 <td colspan="2"><a href="https://developer.android.com/tools"><img
-                                            src="../ivan-qa/images/icons/logo-android-sdk-tools.png"
+                                            src="images/icons/logo-android-sdk-tools.png"
                                             alt="Android SDK Tools logo">Android SDK Tools</a></td>
                             </tr>
 
                             <tr>
                                 <td>API Testing</td>
                                 <td><a href="https://www.postman.com/"><img
-                                            src="../ivan-qa/images/icons/logo-postman.png"
+                                            src="images/icons/logo-postman.png"
                                             alt="Postman logo">Postman</a></td>
                                 <td><a href="https://www.telerik.com/fiddler"><img
-                                            src="../ivan-qa/images/icons/logo-fiddler.png"
+                                            src="images/icons/logo-fiddler.png"
                                             alt="Fiddler logo">Fiddler</a></td>
                                 <td colspan="2"><a href="https://www.charlesproxy.com/"><img
-                                            src="../ivan-qa/images/icons/logo-charles.png" alt="Charles logo">Charles
+                                            src="images/icons/logo-charles.png" alt="Charles logo">Charles
                                         Proxy</a></td>
                             </tr>
 
                             <tr>
                                 <td>Perfomance Testing</td>
                                 <td><a href="https://jmeter.apache.org/"><img
-                                            src="../ivan-qa/images/icons/logo-jmeter.png" alt="JMeter logo">JMeter</a>
+                                            src="images/icons/logo-jmeter.png" alt="JMeter logo">JMeter</a>
                                 </td>
-                                <td colspan="2"><img src="../ivan-qa/images/icons/logo-network-tab.png"
+                                <td colspan="2"><img src="images/icons/logo-network-tab.png"
                                         alt="Network Tab (DevTools) logo">Browser DevTools (Network)</td>
                                 <td><a href="https://developer.chrome.com/docs/lighthouse/overview/"><img
-                                            src="../ivan-qa/images/icons/logo-lighthouse.png"
+                                            src="images/icons/logo-lighthouse.png"
                                             alt="Lighthouse logo">Lighthouse</a></td>
                             </tr>
 
                             <tr>
                                 <td>Regression Automation</td>
                                 <td colspan="4"><a href="https://www.selenium.dev/selenium-ide/"><img
-                                            src="../ivan-qa/images/icons/logo-selenium-ide.png"
+                                            src="images/icons/logo-selenium-ide.png"
                                             alt="Selenium IDE logo">Selenium IDE</a></td>
                             </tr>
 
                             <tr>
                                 <td>Accessibility</td>
                                 <td><a href="https://www.deque.com/axe/devtools/"><img
-                                            src="../ivan-qa/images/icons/logo-axe-dev.png" alt="Axe logo">Axe</a></td>
-                                <td><a href="https://wave.webaim.org/"><img src="../ivan-qa/images/icons/logo-WAVE.png"
+                                            src="images/icons/logo-axe-dev.png" alt="Axe logo">Axe</a></td>
+                                <td><a href="https://wave.webaim.org/"><img src="images/icons/logo-WAVE.png"
                                             alt="WAVE logo">WAVE</a></td>
                                 <td colspan="2"><a href="https://developer.chrome.com/docs/lighthouse/overview/"><img
-                                            src="../ivan-qa/images/icons/logo-lighthouse.png"
+                                            src="images/icons/logo-lighthouse.png"
                                             alt="Lighthouse logo">Lighthouse</a></td>
                             </tr>
 
                             <tr>
                                 <td>Continuous Integration & Build Tools</td>
                                 <td colspan="4"><a href="https://www.jenkins.io/"><img
-                                            src="../ivan-qa/images/icons/logo-jenkins.png"
+                                            src="images/icons/logo-jenkins.png"
                                             alt="Jenkins logo">Jenkins</a></td>
                             </tr>
 
                             <tr>
                                 <td>Databases</td>
                                 <td><a href="https://en.wikipedia.org/wiki/SQL"><img
-                                            src="../ivan-qa/images/icons/logo-sql.png" alt="SQL logo">SQL</a></td>
+                                            src="images/icons/logo-sql.png" alt="SQL logo">SQL</a></td>
                                 <td colspan="3"><a href="https://www.phpmyadmin.net/"><img
-                                            src="../ivan-qa/images/icons/logo-php-my-admin.png"
+                                            src="images/icons/logo-php-my-admin.png"
                                             alt="phpMyAdmin logo">phpMyAdmin</a></td>
                             </tr>
 
                             <tr>
                                 <td>Code Development</td>
                                 <td colspan="4"><a href="https://code.visualstudio.com/"><img
-                                            src="../ivan-qa/images/icons/logo-visual-studio-code.png"
+                                            src="images/icons/logo-visual-studio-code.png"
                                             alt="Visual Studio Code logo">Visual Studio Code</a></td>
                             </tr>
 
                             <tr>
                                 <td>Source Code Management</td>
                                 <td colspan="4"><a href="https://git-scm.com/"><img
-                                            src="../ivan-qa/images/icons/logo-git.png" alt="GIT logo"></a>GIT</td>
+                                            src="images/icons/logo-git.png" alt="GIT logo"></a>GIT</td>
                             </tr>
 
                             <tr>
                                 <td>Extensions</td>
-                                <td colspan="4"><a href="../ivan-qa/projects/web-browser-extensions.html"><img
-                                            src="../ivan-qa/images/icons/logo-extensions.png"
+                                <td colspan="4"><a href="projects/web-browser-extensions.html"><img
+                                            src="images/icons/logo-extensions.png"
                                             alt="Web Browser Extensions logo">Web Browser Extensions</a></td>
                             </tr>
 
                             <tr>
                                 <td>Team Collaboration & Communication</td>
-                                <td><a href="https://slack.com/"><img src="../ivan-qa/images/icons/logo-slack.png"
+                                <td><a href="https://slack.com/"><img src="images/icons/logo-slack.png"
                                             alt="Slack logo">Slack</a></td>
-                                <td><a href="https://zoom.us/"><img src="../ivan-qa/images/icons/logo-zoom.png"
+                                <td><a href="https://zoom.us/"><img src="images/icons/logo-zoom.png"
                                             alt="Zoom logo">Zoom</a></td>
                                 <td><a href="https://www.skype.com/en/"><img
-                                            src="../ivan-qa/images/icons/logo-skype.png" alt="Skype logo">Skype</a></td>
+                                            src="images/icons/logo-skype.png" alt="Skype logo">Skype</a></td>
                                 <td><a href="https://www.teamviewer.com/en-us/"><img
-                                            src="../ivan-qa/images/icons/logo-team-viewer.png"
+                                            src="images/icons/logo-team-viewer.png"
                                             alt="TeamViewer logo">TeamViewer</a></td>
                             </tr>
 
@@ -418,7 +418,7 @@
                 <!--footer-section-4-->
                 <li>
                     <h2>2023 - Ivan Gavrikov</h2>
-                    <a href="../ivan-qa/index.html">Quality Assurance Specialist</a>
+                    <a href="index.html">Quality Assurance Specialist</a>
                 </li>
             </ul>
         </footer>
