--- a/projects.html
+++ b/projects.html
@@ -5,14 +5,14 @@
     <title>Ivan Gavrikov &#8211; Projects</title>
     <!--Meta-->
     <meta charset=utf-8>
-    <link rel="apple-touch-icon" sizes="180x180" href="../ivan-qa/favicon-apple-180x180.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../ivan-qa/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../ivan-qa/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon-apple-180x180.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <!--Plugins CSS-->
     <!--font-awesome-version 4.7.0-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--Theme CSS-->
-    <link rel="stylesheet" type="text/css" href="../ivan-qa/styles/main.css">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 
 <body id="top">
@@ -29,13 +29,13 @@
             <div class="dark-mode-section">
                 <button class="btn-dark-mode">Dark Mode</button>
             </div>
-            <script src="../ivan-qa/scripts/dark-mode.js"></script>
+            <script src="scripts/dark-mode.js"></script>
             <!--top-section-->
             <div class="top-section">
                 <!--header-->
                 <header>
                     <div class="person-info">
-                        <h1 class="name"><a href="../ivan-qa/index.html"><i class="fa fa-user-o"
+                        <h1 class="name"><a href="index.html"><i class="fa fa-user-o"
                                     aria-hidden="true"></i>Ivan
                                 Gavrikov</a></h1>
                         <h2 class="position">QA Specialist</h2>
@@ -45,11 +45,11 @@
                 <!--nav-->
                 <nav class="top-nav">
                     <ul>
-                        <li><a href="../ivan-qa/resume.html">Resume</a></li>
+                        <li><a href="resume.html">Resume</a></li>
 
                         <li>|</li>
 
-                        <li><a href="../ivan-qa/projects.html">Projects</a></li>
+                        <li><a href="projects.html">Projects</a></li>
 
                         <li>|</li>
 
@@ -57,7 +57,7 @@
 
                         <li>|</li>
 
-                        <li><a href="../ivan-qa/feedback.html">Feedback</a></li>
+                        <li><a href="feedback.html">Feedback</a></li>
 
                     </ul>
                 </nav>
@@ -66,7 +66,7 @@
         <!--main-nav-menu-->
         <nav class="main-nav">
             <ul>
-                <li><a href="../ivan-qa/index.html">Main</a></li>
+                <li><a href="index.html">Main</a></li>
                 <li><i class="fa fa-angle-right" aria-hidden="true"></i></li>
                 <li>Projects</li>
             </ul>
@@ -87,23 +87,23 @@
                         <h4>Test Artefacts</h4>
                         <p>This list is not comprehensive, but includes main software testing artefacts.</p>
                         <ul>
-                            <li><a href="../ivan-qa/projects/test-strategy.html">
+                            <li><a href="projects/test-strategy.html">
                                     Test Strategy
                                 </a>
                             </li>
-                            <li><a href="../ivan-qa/projects/test-plan.html">
+                            <li><a href="projects/test-plan.html">
                                     Test Plan
                                 </a>
                             </li>
-                            <li><a href="../ivan-qa/projects/test-case.html">
+                            <li><a href="projects/test-case.html">
                                     Test Case
                                 </a>
                             </li>
-                            <li><a href="../ivan-qa/projects/bug-report.html">
+                            <li><a href="projects/bug-report.html">
                                     Bug Report
                                 </a>
                             </li>
-                            <li><a href="../ivan-qa/projects/test-report.html">
+                            <li><a href="projects/test-report.html">
                                     Test Report
                                 </a>
                             </li>
@@ -113,38 +113,38 @@
                     <section class="article-section">
                         <h4>Examples</h4>
                         <ul>
-                            <li><a id="test_scenario_based_on_user_story" href="../ivan-qa/projects/test-scenario-based-on-user-story.html">
+                            <li><a id="test_scenario_based_on_user_story" href="projects/test-scenario-based-on-user-story.html">
                                 Test Scenario Based On User Story
                             </a>
                             </li>
 
-                            <li><a id="my_bug_reports" href="../ivan-qa/projects/my-bug-reports.html">
+                            <li><a id="my_bug_reports" href="projects/my-bug-reports.html">
                                 My Bug Reports
                             </a>
                             </li>
 
-                            <li><a id="restful_booker_api_testing_with_postman" href="../ivan-qa/projects/restful-booker-API-testing-with-postman.html">
+                            <li><a id="restful_booker_api_testing_with_postman" href="projects/restful-booker-API-testing-with-postman.html">
                                 Restful Booker API Testing with Postman
                                 </a>
                             </li>
 
-                            <li><a id="gui_automiation_testing_with_selenium_ide" href="../ivan-qa/projects/gui-automation-testing-with-selenium-ide.html">
+                            <li><a id="gui_automiation_testing_with_selenium_ide" href="projects/gui-automation-testing-with-selenium-ide.html">
                                 GUI automation testing with Selenium IDE
                                 </a>
                             </li>
 
                             <!--
-                            <li><a id="automiation_testing_with_cypress" href="../ivan-qa/projects/automation-testing-with-cypress.html">
+                            <li><a id="automiation_testing_with_cypress" href="projects/automation-testing-with-cypress.html">
                                 Automation testing with Cypress
                                 </a>
                             </li>-->
 
-                            <li><a id="jenkins_usage" href="../ivan-qa/projects/jenkins-usage.html">
+                            <li><a id="jenkins_usage" href="projects/jenkins-usage.html">
                                 Jenkins Usage
                                 </a>
                             </li>
 
-                            <li><a id="simple_calculator" href="../ivan-qa/projects/calculator.html">Simple Calculator
+                            <li><a id="simple_calculator" href="projects/calculator.html">Simple Calculator
                                 written on JavaScript</a></li>
 
                         </ul>
@@ -153,12 +153,12 @@
                     <section class="article-section">
                         <h4>Tools</h4>
                         <ul>
-                            <li><a href="../ivan-qa/projects/web-browser-extensions.html">
+                            <li><a href="projects/web-browser-extensions.html">
                                 Browser Extensions
                             </a> - my list of the useful web browser extensions
                             </li>
 
-                            <li><a href="../ivan-qa/projects/nu-HTML-checker.html">
+                            <li><a href="projects/nu-HTML-checker.html">
                                     Nu HTML Checker
                                 </a> - how to check your website for issues with HTML tags
                             </li>
@@ -404,7 +404,7 @@
                 <!--footer-section-4-->
                 <li>
                     <h2>2023 - Ivan Gavrikov</h2>
-                    <a href="../ivan-qa/index.html">Quality Assurance Specialist</a>
+                    <a href="index.html">Quality Assurance Specialist</a>
                 </li>
             </ul>
         </footer>
