--- a/resume.html
+++ b/resume.html
@@ -5,14 +5,14 @@
     <title>Ivan Gavrikov &#8211; Resume</title>
     <!--Meta-->
     <meta charset=utf-8>
-    <link rel="apple-touch-icon" sizes="180x180" href="../ivan-qa/favicon-apple-180x180.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../ivan-qa/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../ivan-qa/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon-apple-180x180.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <!--Plugins CSS-->
     <!--font-awesome-version 4.7.0-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--Theme CSS-->
-    <link rel="stylesheet" type="text/css" href="../ivan-qa/styles/main.css">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 
 <body id="top">
@@ -26,7 +26,7 @@
         <!--header-->
         <header class="header">
             <div class="person-info">
-                <div class="btn-back-to-main"><a href="../ivan-qa/index.html"><i class="fa fa-arrow-left"
+                <div class="btn-back-to-main"><a href="index.html"><i class="fa fa-arrow-left"
                             aria-hidden="true"></i>Back to main</a></div>
                 <h2 class="name">Ivan Gavrikov</h2>
                 <h3 class="position">Quality Assurance Specialist</h3>
@@ -41,10 +41,10 @@
                                     class="fa fa-linkedin" aria-hidden="true"></i>LinkedIn</a></li>
                     </ul>
                 </div>
-                <a href="https://drive.google.com/file/d/1B89uaxtLg-ft4AOk9uoTrA8Ba74SRWhc/view?usp=sharing"
+                <a href="https://drive.google.com/file/d/1A3qB7azCA0Xa61lu_Vu-p-8J22vxuHe8/view?usp=sharing"
                     class="btn-simple" rel="external">Resume in PDF</a>
             </div>
-            <a href="index.html"><img class="avatar" src="../ivan-qa/images/avatar.jpg" width="180"
+            <a href="index.html"><img class="avatar" src="images/avatar.jpg" width="180"
                     alt="Photo Ivan Gavrikov"></a>
         </header>
         <!--main-wrapper-->
